--- a/src/features/in-developing/ui/page/Page.module.scss
+++ b/src/features/in-developing/ui/page/Page.module.scss
@@ -1,1 +1,7 @@
-.page {}
+@import '../in-developing//InDeveloping.mixins.scss';
+
+.page {
+  @include linearGradient(180deg, var(--color-primary09), var(--color-primary07));
+
+  height: 660px;
+}
