--- a/src/features/in-developing/ui/platform/Platform.module.scss
+++ b/src/features/in-developing/ui/platform/Platform.module.scss
@@ -1,6 +1,8 @@
 .platform {
-  width: 600px;
+  width: 500px;
   height: 60vh;
-  background-color: rgb(204, 138, 138);
-  transform: rotateX(55deg) rotateY(-3deg) rotateZ(49deg);
+  background-color: var(--color-white);
+  border-radius: 25px 25px 0 0;
+  // transform: rotateX(55deg) rotateY(-3deg) rotateZ(49deg);
+  transform: rotateX(45deg) rotateY(-10deg) rotateZ(45deg);
 }
