--- a/src/features/in-developing/ui/browser-header/BrowserHeader.module.scss
+++ b/src/features/in-developing/ui/browser-header/BrowserHeader.module.scss
@@ -1,1 +1,83 @@
-.browser_header {}
+
+.browser_header {
+  background-color: var(--color-primary09);
+  height: 40px;
+}
+
+.browser_tabs {
+  display: flex;
+  width: 100%;
+  height: 20px;
+  background-color: var(--color-shadow1)
+}
+
+.browser_tab {
+  position: relative;
+  width: 100px;
+  height: 20px;
+  border-radius: 10px 10px 0 0;
+  background-color: var(--color-shadow02)
+}
+
+.browser_tab_close {
+  position: absolute;
+  top: 0;
+  right: 10px;
+}
+
+.browser_tab_close_icon {
+  font-size: 0.8rem;
+}
+
+.browser_tab_name, .browser_tab_close {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.browser_tab_name {
+  padding-left: 10px;
+  font-size: 0.7rem;
+}
+
+.browser_panel {
+  display: flex;
+  align-items: center;
+  height: 20px;
+  background-color: var(--color-shadow01)
+}
+
+.browser_panel_buttons {
+  display: flex;
+  height: 20px;
+  width: 80px;
+}
+
+.browser_panel_left, .browser_panel_right, .browser_panel_refresh, .browser_panel_home {
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+  svg {
+    font-size: 0.8rem;
+  }
+}
+
+.browser_panel_right {
+  transform: rotate(180deg);
+}
+
+.browser_panel_url {
+  display: flex;
+  align-items: center;
+  padding-top: 1px;
+  font-size: 0.6rem;
+  padding-left: 8px;
+  width: 300px;
+  height: 15px;
+  margin-bottom: 1px;
+  border-radius: 20px;
+  background-color: var(--color-shadow01)
+}
