--- a/src/features/in-developing/ui/github-widget/GithubWidget.module.scss
+++ b/src/features/in-developing/ui/github-widget/GithubWidget.module.scss
@@ -1,1 +1,48 @@
-.github_widget {}
+.github_widget {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 140px;
+  padding: 20px 30px;
+}
+
+.square {
+  position: absolute;
+  width: 180px;
+  height: 130px;
+  background-color: var(--color-primary06);
+}
+
+.git_icon {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  svg {
+    font-size: 3rem;
+  }
+}
+
+.square._v1 {
+  border: 1px solid var(--color-shadow01);
+  z-index: 10;
+  background-color: var(--color-primary);
+  top: -50px;
+  left: -30px;
+}
+
+.square._v2 {
+  z-index: 9;
+  top: -30px;
+  left: -10px;
+}
+
+.square._v3 {
+  z-index: 8;
+  top: -10px;
+  left: 10px;
+  box-shadow: 25px 15px 1px 0 var(--color-shadow01);
+}
