--- a/src/features/in-developing/animations/github-widget/GithubWidget.module.scss
+++ b/src/features/in-developing/animations/github-widget/GithubWidget.module.scss
@@ -15,6 +15,8 @@
 }
 
 .git_icon {
+  cursor: pointer;
+  position: absolute;
   width: 100%;
   height: 100%;
   display: flex;
@@ -27,11 +29,24 @@
 }
 
 .square._v1 {
-  border: 1px solid var(--color-shadow01);
+  overflow: hidden;
+  // border: 1px solid var(--color-shadow01);
   z-index: 10;
-  background-color: var(--color-primary);
+  // background-color: var(--color-primary);
+  border: 2px solid var(--color-white);
+  border-radius: 5px;
   top: -50px;
   left: -30px;
+}
+
+.tab {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 50px;
+  height: 10px;
+  background-color: var(--color-white);
+  border-radius: 5px 0 0;
 }
 
 .square._v2 {
