[FIX] In Developing animations

--- a/src/features/in-developing/animations/cards-widget/CardsWidget.module.scss
+++ b/src/features/in-developing/animations/cards-widget/CardsWidget.module.scss
@@ -6,16 +6,86 @@
   padding: 20px 30px;
 }
 
+.raz {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 40px;
+  height: 33px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: 2px solid white;
+}
+
+.raz._v1 {
+  animation: progress 6s cubic-bezier(.25, .4, .75, .6) infinite;
+}
+
+.raz._v2 {
+  animation: progress 7s cubic-bezier(.25, .4, .75, .6) infinite;
+}
+
+.raz._v3 {
+  animation: progress 8s cubic-bezier(.25, .4, .75, .6) infinite;
+}
+
+.raz_shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 40px;
+  height: 33px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: 2px solid var(--color-shadow01);
+}
+
+@keyframes progress {
+  0% {
+    clip-path: polygon(50% 50%, 50% -21%, 50% -21%, 50% -21%, 50% -21%, 50% -21%);
+  }
+
+  25% {
+    clip-path: polygon(50% 50%, 50% -21%, -21% 50%, -21% 50%, -21% 50%, -21% 50%);
+  }
+
+  50% {
+    clip-path: polygon(50% 50%, 50% -21%, -21% 50%, 50% 121%, 50% 121%, 50% 121%);
+  }
+
+  75% {
+    clip-path: polygon(50% 50%, 50% -21%, -21% 50%, 50% 121%, 121% 50%, 121% 50%);
+  }
+
+  100% {
+    clip-path: polygon(50% 50%, 50% -21%, -21% 50%, 50% 121%, 121% 50%, 50% -21%);
+  }
+}
+
 .card {
+  transition: all 0.5s;
   padding: 8px 10px;
+  cursor: pointer;
   width: 60px;
   height: 100%;
   background: var(--color-primary);
   border-radius: 5px;
   box-shadow: 7px 7px 1px 0 var(--color-shadow02);
+
+  &:hover {
+    transform: translateX(-5px) translateZ(-5px);
+    box-shadow: 10px 10px 3px 0 var(--color-shadow02);
+  }
+
+  &:active {
+    transform: translateX(0) translateY(0) scale(0.97);
+    box-shadow: 7px 7px 1px 0 var(--color-shadow02);
+  }
 }
 
 .card_circle {
+  position: relative;
   width: 40px;
   height: 33px;
   background-color: var(--color-shadow01);
@@ -29,4 +99,8 @@
   border-radius: 20px;
   background-color: white;
   margin-bottom: 7px;
+}
+
+.card_line.short {
+  width: 50%;
 }
