--- a/src/features/in-developing/animations/image-widget/ImageWidget.module.scss
+++ b/src/features/in-developing/animations/image-widget/ImageWidget.module.scss
@@ -8,6 +8,7 @@
 }
 
 .image {
+  transition: all 0.5s;
   position: absolute;
   cursor: pointer;
   overflow: hidden;
@@ -19,6 +20,15 @@
   border-radius: 5px;
   box-shadow: 25px 15px 1px 0 var(--color-shadow01);
   background: linear-gradient(180deg, rgb(51, 255, 0) 10%, rgb(45, 45, 230) 60%);
+
+  &:active {
+    box-shadow: 7px 7px 1px 0 var(--color-shadow02);
+    transform: translateX(20px) translateY(30px);
+  }
+
+  &:hover {
+    top: -40px;
+  }
 }
 
 .mountain {
