--- a/src/features/in-developing/animations/platform/Platform.module.scss
+++ b/src/features/in-developing/animations/platform/Platform.module.scss
@@ -6,4 +6,5 @@
   // transform: rotateX(55deg) rotateY(-3deg) rotateZ(49deg);
   transform: rotateX(45deg) rotateY(-10deg) rotateZ(45deg);
   box-shadow: 10px 10px 0 0 var(--color-shadow01);
+  background: linear-gradient(180deg, #4f86ff, #729fff);
 }
