--- a/src/features/in-developing/animations/github-widget/GithubWidget.module.scss
+++ b/src/features/in-developing/animations/github-widget/GithubWidget.module.scss
@@ -5,10 +5,44 @@
   width: 100%;
   height: 140px;
   padding: 20px 30px;
+
+  &:hover .square._v1 {
+    top: -40px;
+    left: -20px;
+  }
+
+  &:hover .square._v2 {
+    top: -25px;
+    left: -5px;
+  }
+
+  &:hover .square._v3 {
+    top: -10px;
+    left: 10px;
+    box-shadow: 7px 7px 1px 0 var(--color-shadow02);
+  }
+
+  &:active .square._v1 {
+    top: -30px;
+    left: -10px;
+  }
+
+  &:active .square._v2 {
+    top: -20px;
+    left: 2px;
+  }
+
+  &:active .square._v3 {
+    top: -10px;
+    left: 10px;
+    box-shadow: 7px 7px 1px 0 var(--color-shadow02);
+  }
 }
 
 .square {
+  transition: all 0.5s;
   position: absolute;
+  border-radius: 5px;
   width: 180px;
   height: 130px;
   background-color: var(--color-primary06);
@@ -30,11 +64,8 @@
 
 .square._v1 {
   overflow: hidden;
-  // border: 1px solid var(--color-shadow01);
   z-index: 10;
-  // background-color: var(--color-primary);
   border: 2px solid var(--color-white);
-  border-radius: 5px;
   top: -50px;
   left: -30px;
 }
