--- a/src/features/in-developing/animations/tabs-widget/ui/tabs-widget-name/TabsWidgetName.module.scss
+++ b/src/features/in-developing/animations/tabs-widget/ui/tabs-widget-name/TabsWidgetName.module.scss
@@ -1,5 +1,6 @@
 .tabs_widget_name {
   transition: background 0.1s;
+  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
