--- a/src/features/in-developing/animations/page/ui/page-header/PageHeader.module.scss
+++ b/src/features/in-developing/animations/page/ui/page-header/PageHeader.module.scss
@@ -5,6 +5,7 @@
   width: 100%;
   height: 30px;
   padding: 2px 20px;
+  color: var(--color-text);
   background-color: var(--color-primary05);
 }
 
