--- a/src/features/in-developing/animations/tabs-widget/ui/tabs-widget-name/TabsWidgetName.module.scss
+++ b/src/features/in-developing/animations/tabs-widget/ui/tabs-widget-name/TabsWidgetName.module.scss
@@ -11,6 +11,7 @@
   border-radius: 5px 5px 0 0;
   box-shadow: 7px 7px 1px 0 var(--color-shadow02);
   border: 1px solid var(--color-shadow01);
+  color: var(--color-text);
 
   svg {
     font-size: 1.2rem;
@@ -18,7 +19,7 @@
 }
 
 .tabs_widget_name.active {
-  background-color: var(--color-secondary);
+  background-color: var(--color-green);
 }
 
 .tabs_widget_name:last-child {
