--- a/src/features/in-developing/styles/variables.scss
+++ b/src/features/in-developing/styles/variables.scss
@@ -1,32 +1,28 @@
 .in_developing.animation {
   --color-shadow: black;
-  --color-shadow02: rgba(0, 0, 0, 0.2);
-  --color-shadow01: rgba(0, 0, 0, 0.1);
+  --color-shadow02: rgba(0 0 0 / 20%);
+  --color-shadow01: rgba(0 0 0 / 10%);
   --color-secondary: orange;
+  --color-yellow: gold;
+  --color-blue: steelblue;
+  --color-green: lightgreen;
+  --color-primary: #3067dd;
+  --color-primary09: rgb(49 104 221 / 90%);
+  --color-primary08: rgb(49 104 221 / 80%);
+  --color-primary07: rgb(49 104 221 / 70%);
+  --color-primary06: rgb(49 104 221 / 60%);
+  --color-primary05: rgb(49 104 221 / 50%);
+  --color-primary04: rgb(49 104 221 / 40%);
+  --color-primary03: rgb(49 104 221 / 30%);
+  --color-primary02: rgb(49 104 221 / 20%);
+  --color-primary01: rgb(49 104 221 / 10%);
+  --color-text: white;
 }
 
 .in_developing.animation.light {
-  --color-primary: #4ca31a;
-  --color-primary09: rgba(76, 162, 26, 0.9);
-  --color-primary08: rgba(76, 162, 26, 0.8);
-  --color-primary07: rgba(76, 162, 26, 0.7);
-  --color-primary06: rgba(76, 162, 26, 0.6);
-  --color-primary05: rgba(76, 162, 26, 0.5);
-  --color-primary04: rgba(76, 162, 26, 0.4);
-  --color-primary03: rgba(76, 162, 26, 0.3);
-  --color-primary02: rgba(76, 162, 26, 0.2);
-  --color-primary01: rgba(76, 162, 26, 0.1);
+  --color-text2: #d6e3ff;
 }
 
 .in_developing.animation.dark {
-  --color-primary: #3067dd;
-  --color-primary09: rgb(49, 104, 221, 0.9);
-  --color-primary08: rgb(49, 104, 221, 0.8);
-  --color-primary07: rgb(49, 104, 221, 0.7);
-  --color-primary06: rgb(49, 104, 221, 0.6);
-  --color-primary05: rgb(49, 104, 221, 0.5);
-  --color-primary04: rgb(49, 104, 221, 0.4);
-  --color-primary03: rgb(49, 104, 221, 0.3);
-  --color-primary02: rgb(49, 104, 221, 0.2);
-  --color-primary01: rgb(49, 104, 221, 0.1);
+  --color-text2: white;
 }
