--- a/src/features/in-developing/animations/animation/Animation.module.scss
+++ b/src/features/in-developing/animations/animation/Animation.module.scss
@@ -36,8 +36,10 @@
 
 .title {
   position: absolute;
-  bottom: 0;
+  bottom: -20px;
   font-size: 2rem;
+  font-weight: bold;
+  letter-spacing: 0.5px;
 }
 
 .side,
