[REFACT] Select and hooks

--- a/src/shared/ui/controllable-menu/ui/controllable-menu/ControllableMenu.module.scss
+++ b/src/shared/ui/controllable-menu/ui/controllable-menu/ControllableMenu.module.scss
@@ -1,1 +1,7 @@
-.controllable_menu {}
+@import '@/app/styles/mixins/global.scss';
+
+.controllable_menu {
+  @include scroll;
+
+  overflow: auto;
+}
