[REFACT] Input component

--- a/src/shared/ui/controllable-menu/ui/controllable-menu/ControllableMenu.module.scss
+++ b/src/shared/ui/controllable-menu/ui/controllable-menu/ControllableMenu.module.scss
@@ -1,7 +1,7 @@
-@import '@/app/styles/mixins/global.scss';
+// @import '@/app/styles/mixins/global.scss';
 
-.controllable_menu {
-  @include scroll;
+// .controllable_menu {
+//   @include scroll;
 
-  overflow: auto;
-}
+//   overflow: auto;
+// }
