--- a/src/shared/ui/controllable-menu/ui/controllable-menu/ControllableMenu.module.scss
+++ b/src/shared/ui/controllable-menu/ui/controllable-menu/ControllableMenu.module.scss
@@ -1,7 +1,8 @@
-// @import '@/app/styles/mixins/global.scss';
+@import '@/app/styles/mixins/global';
 
-// .controllable_menu {
-//   @include scroll;
+.controllable_menu {
+  @include scroll;
 
-//   overflow: auto;
-// }
+  width: 500px;
+  overflow: auto;
+}
