--- a/src/entities/template/ui/template-list/TemplateList.module.scss
+++ b/src/entities/template/ui/template-list/TemplateList.module.scss
@@ -1,3 +1,9 @@
+@import '@/app/styles/mixins/global';
+
+.scroll {
+  @include scroll;
+}
+
 .template_list {
   display: flex;
   justify-content: center;
