--- a/src/shared/ui/controllable-menu/ui/controllable-menu-item/ControllableMenuItem.module.scss
+++ b/src/shared/ui/controllable-menu/ui/controllable-menu-item/ControllableMenuItem.module.scss
@@ -30,6 +30,12 @@
   }
 }
 
+.controllable_menu_item.center {
+  padding: 0;
+  justify-content: center;
+  align-items: center;
+}
+
 .menu {
   z-index: 100;
   position: absolute;
