--- a/src/widgets/sheets-formula/ui/sheets-formula/SheetsFormula.module.scss
+++ b/src/widgets/sheets-formula/ui/sheets-formula/SheetsFormula.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   height: var(--sheets-formula-height);
+  border-top: 1px solid var(--color-border);
 }
 
 .input {
