--- a/src/app/layout/ui/layout/Layout.module.scss
+++ b/src/app/layout/ui/layout/Layout.module.scss
@@ -4,10 +4,9 @@
   @include scroll(12px);
 
   background-color: var(--color-main);
-  overflow: auto;
+  overflow: hidden;
   width: 100%;
   height: 100%;
-  padding: 0 calc(var(--gap) * 4);
   min-height: calc(100vh - var(--sheets-header-height));
   max-height: calc(100vh - var(--sheets-header-height));
 }
