--- a/src/entities/cell/ui/cell/Cell.module.scss
+++ b/src/entities/cell/ui/cell/Cell.module.scss
@@ -1,4 +1,8 @@
 .cell {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
   width: var(--cell-width);
   height: var(--cell-height);
   border-bottom: 1px solid var(--color-border);
