--- a/src/widgets/sheets/sheets-table/ui/sheets-table/SheetsTable.module.scss
+++ b/src/widgets/sheets/sheets-table/ui/sheets-table/SheetsTable.module.scss
@@ -9,7 +9,8 @@
 .table {
   position: relative;
   display: flex;
-  height: 200px;
+  height: calc(100% - 30px);
+  padding-bottom: 14px;
 }
 
 .table_header {
@@ -42,7 +43,7 @@
 .bottom_scroll {
   height: 14px;
   width: 100%;
-  bottom: -14px;
+  bottom: 0;
   left: 0;
 }
 
